--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: TWRP Build - Tecno CL8
-
 on:
   workflow_dispatch:
 
@@ -10,36 +9,33 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Cleanup Disk Space
+      - name: Install Dependencies
         run: |
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf "/usr/local/share/boost"
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+          sudo apt-get update
+          sudo apt-get install -y git-core gnupg flex bison build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 libncurses5 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig
 
       - name: Install Repo Tool
         run: |
-          mkdir -p ~/bin
+          mkdir ~/bin
           curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
           chmod a+x ~/bin/repo
           sudo ln -sf ~/bin/repo /usr/bin/repo
 
-      - name: Sync Minimal TWRP
+      - name: Sync TWRP Source
         run: |
           mkdir ~/twrp && cd ~/twrp
           repo init --depth=1 -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-12.1
           repo sync -j$(nproc --all) --force-sync --no-tags --no-clone-bundle
 
-      - name: Build Recovery Image
+      - name: Build
         run: |
           cd ~/twrp
           cp -r $GITHUB_WORKSPACE/. device/tecno/CL8/
-          export ALLOW_MISSING_DEPENDENCIES=true
           source build/envsetup.sh
           lunch twrp_CL8-eng
           mka recoveryimage -j$(nproc --all)
 
-      - name: Upload TWRP
+      - name: Upload
         uses: actions/upload-artifact@v4
         with:
           name: TWRP-Tecno-CL8
