--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,38 +4,35 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04  # Mas stable para sa luma/minimal repo tools
     steps:
-      - name: Checkout
+      - name: Checkout Source
         uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y git-core gnupg flex bison build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 libncurses5 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig
-
-      - name: Install Repo Tool
+      - name: Setup Repo Tool
         run: |
           mkdir ~/bin
           curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
           chmod a+x ~/bin/repo
           sudo ln -sf ~/bin/repo /usr/bin/repo
 
-      - name: Sync TWRP Source
+      - name: Sync Minimal TWRP
         run: |
           mkdir ~/twrp && cd ~/twrp
           repo init --depth=1 -u https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-12.1
           repo sync -j$(nproc --all) --force-sync --no-tags --no-clone-bundle
 
-      - name: Build
+      - name: Build Recovery Image
         run: |
           cd ~/twrp
+          mkdir -p device/tecno/CL8
           cp -r $GITHUB_WORKSPACE/. device/tecno/CL8/
+          export ALLOW_MISSING_DEPENDENCIES=true
           source build/envsetup.sh
           lunch twrp_CL8-eng
           mka recoveryimage -j$(nproc --all)
 
-      - name: Upload
+      - name: Upload TWRP
         uses: actions/upload-artifact@v4
         with:
           name: TWRP-Tecno-CL8
