--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04  
-
+    runs-on: ubuntu-20.04  # Mas stable para sa luma/minimal repo tools
     steps:
       - name: Checkout Source
         uses: actions/checkout@v4
